--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,44 @@
-.App {
+@media only screen and (min-width: 320px) and (max-width: 860px) {}
+
+.center{
+  background-image: linear-gradient(294deg,#006080,#006181 47%,#003648);
+  height: 550px;
+  z-index: 2;
+}
+
+.text-center{
+  background-image: url(https://next-cdn.codementor.io/static/images/landing-page/bg-lines-1.png);
+}
+
+.page-header{
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+h1{
+  color: ghostwhite;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 2px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ #box{
+  position: relative;
+  margin: -65px auto 100px auto;
 }
-
-.App-link {
-  color: #61dafb;
+#box .img img{
+  max-width: 50%;
+max-height: auto;
+display: block;
+margin: auto;
+box-shadow: none;
+border: none;
+text-align: center;
+  z-index: 1;
+  position: absolute;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wrapper{
+  text-align: center;
+  padding-top: 140px;
+  margin-bottom: 10px;
+}
+#main{
+  text-align: center;
 }
