--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
-@media only screen and (min-width: 320px) and (max-width: 860px) {}
 
-.center{
-  background-image: linear-gradient(294deg,#006080,#006181 47%,#003648);
-  height: 550px;
-  z-index: 2;
-}
+  body {
+    text-align: center;
+  }
 
+  .center {
+    background-image: linear-gradient(294deg,#006080,#006181 47%,#003648);
+    z-index: 2;
+    height:500px;
+  }
 .text-center{
   background-image: url(https://next-cdn.codementor.io/static/images/landing-page/bg-lines-1.png);
 }
@@ -19,26 +21,74 @@ h1{
   text-align: center;
   padding-top: 2px;
 }
- #box{
-  position: relative;
-  margin: -65px auto 100px auto;
+ .box{
+  position: absolute; 
+  padding: 0;
+  top: auto;  
 }
-#box .img img{
-  max-width: 50%;
-max-height: auto;
-display: block;
-margin: auto;
-box-shadow: none;
-border: none;
-text-align: center;
-  z-index: 1;
-  position: absolute;
+@media(max-width:50%){
+  .box img{ 
+
+    z-index: 1;
+  }
 }
+
 .wrapper{
-  text-align: center;
   padding-top: 140px;
   margin-bottom: 10px;
 }
 #main{
+  text-align: center;
+}
+div.bottom{
+  padding-top : 40px;
+}
+#pagebody{
+  margin-top: 20px;
+  background-color: #e8f5f9;
+}
+h1.connect{
+  font-size: 48px;
+  font-weight: bold;
+  line-height: 1.5;
+  text-align: center;
+  color: #003648;
+  
+}
+div.title{
+  padding-top: 50px;
+}
+div.icom{
+  margin-top: 40px;
+  text-align: center;
+}
+.slider{
+  margin-top: 80px;
+}
+#text{
+  margin-top: 80px;
+}
+.txtbottom{
+  background-image: linear-gradient(294deg,#006080,#006181 47%,#003648);
+  height: 250px;
+  
+}
+h2.getstarted{
+  padding: 10px;
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 1.5;
+  text-align: center;
+  color: #fff;
+}
+div.or{
+  font-size: 16px;
+  color: rgba(255,255,255,0.4);
+  position: absolute;
+  padding: 10px;
+  margin-left: 185px;
+  margin-top: -50px;
+}
+div.btn{
   text-align: center;
 }
