--- a/src/components/Connectwith.css
+++ b/src/components/Connectwith.css
@@ -1,3 +1,4 @@
+@media(min-width:300px){
 h4.gain{
     margin: 40px 0px 0px;
     font-size: 20px;
@@ -8,9 +9,6 @@ h4.gain{
 }
 div.button{
     margin-top : 20px;
-}
-img{
-    width: 100%;
 }
 h2{
     margin: 0;
@@ -25,13 +23,10 @@ div.variety{
     box-shadow:  6px 12px 0 #5e95ab;
     border: solid 1px #e8f5f9;
     margin: 10px;
-}
-.img-thumbnail{
     margin-top: 10px;
-    width: 50%;
-    height: 50%;
     text-align: center;
 }
+
 .h6{
     font-size: 24px;
     font-weight: bold;
@@ -47,4 +42,5 @@ p{
     color: #999;
     margin-top: 4px;
     text-align: center;
+}
 }
