--- a/src/components/bottoms/Btnbecome.css
+++ b/src/components/bottoms/Btnbecome.css
@@ -1,7 +1,22 @@
+@media(min-width:300px){
 .btn-becom{
     background-color: #006181;
     border: 1px solid #fff;
     color: #ffffff;
     padding: 16px 32px;
-    margin-left: 60px;   
+    margin: 1px;
+    font-size: 14px;  
+}
+}
+@media (min-width: 600px){
+    .btn-becom{
+        background-color: #006181;
+        border: 1px solid #fff;
+        color: #ffffff;
+        padding: 16px 32px;
+        position: absolute;
+        bottom: 120px;
+        left: 670px;
+        font-size: 14px;  
+    }
 }
