--- a/src/components/bottoms/Btngethelpnow.css
+++ b/src/components/bottoms/Btngethelpnow.css
@@ -1,5 +1,10 @@
+@media(min-width:300px){
 .btn-danger{
     background: #ff6b54;
     font-size: 16px;
     padding: 16px 32px;
+    font-weight: bold;
+    line-height: 1.5;
+    border-radius: 3px;
   }
+}
