--- a/src/components/bottoms/Btnhow.css
+++ b/src/components/bottoms/Btnhow.css
@@ -1,3 +1,4 @@
+@media(min-width:300px){
 .btnhow{
     font-size: 14px;
     background-color: #ffffff;
@@ -5,3 +6,4 @@
      padding: 16px 20px;
      margin: 30px;
    }
+  }
