--- a/src/components/bottoms/Btnhowitworks.css
+++ b/src/components/bottoms/Btnhowitworks.css
@@ -1,7 +1,9 @@
+@media(min-width:300px){
 .btn-light{
     background-color: #006181;
     border: 1px solid #fff;
     color: #ffffff;
     padding: 16px 32px;
-    margin: 15px;
+    margin: 30px;
   }
+}
