--- a/src/components/bottoms/Btnlearnmore.css
+++ b/src/components/bottoms/Btnlearnmore.css
@@ -1,3 +1,4 @@
+@media(min-width:300px){
 .btn-more{
     font-size: 14px;
     background-color: #ffffff;
@@ -5,4 +6,5 @@
      border: 1px solid #fff;
      padding: 16px 20px;
      margin: 30px;
+}
 }
