--- a/src/components/icom/icom.css
+++ b/src/components/icom/icom.css
@@ -1,4 +1,5 @@
-img.rounded-circle{
+@media(min-width:300px){
+.rounded-circle{
     width: 150px;
     height: 150px;
 }
@@ -13,4 +14,5 @@ h6{
     font-weight: 600;
     line-height: 1.5;
     color: #999;
+}
 }
